config-root/namespaces/jx-staging/nodey491/deployment.yaml
# Source: nodey491/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey491-nodey491
  labels:
    draft: draft-app
    chart: "nodey491-1.0.43"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodey491-nodey491
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey491-nodey491
    spec:
      containers:
        - name: nodey491
          image: "ghcr.io/jstrachan/nodey491:1.0.43"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "knative-docker-user-pass"
