config-root/namespaces/jx-staging/nodey491/service.yaml
# Source: nodey491/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodey491
  labels:
    chart: "nodey491-1.0.45"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: nodey491-nodey491
