config-root/namespaces/jx-staging/nodey491/ingress.yaml
# Source: nodey491/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nodey491
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nodey491
              servicePort: 80
      host: nodey491-jx.34.78.85.241.nip.io
